packages/kit/test/apps/basics/src/routes/errors/endpoint-shadow-not-ok/+page.server.js
import { error } from '@sveltejs/kit';

/** @type {import('@sveltejs/kit').RequestHandler} */
export function load() {
	error(555, undefined);
}
